fix: make settings visible after start scan + allow clicking entire button instead of logo

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1214,6 +1214,7 @@ html .iu {
     height: 2.35rem;
     border: 1px solid var(--line);
     background: rgba(98, 214, 208, 0.1);
+    cursor: pointer;
 }
 
 .iu .icon-button svg {
